# rag-ingestion-pipeline

./: .gitignore  README.md  config.py  ingest.py  main.py  pyproject.toml  requirements.txt  reset_rag.py
admin-panel/: rag_admin_panel_poc.html
documentation/: admin_panel.md  end-to-end.md  enterprise_rag_sequences.md  ingestion_sequence.md  microsoft_auth_rag.md  retrieval_pipeline.md  sample-architecture.md  scope_token.md  sequence_diagrams.md  system-diagrams.md
prompts/: answer.txt
sap_ingestion_demo/: README_SETUP.md  requirements.txt
sap_ingestion_demo/dags/: sap_document_ingestion_dag.py
sap_ingestion_demo/sap_sharepoint_sim/: manifest.csv
sap_ingestion_demo/sap_sharepoint_sim/cppr/: cppr_1001.txt  cppr_1002.txt
sap_ingestion_demo/sap_sharepoint_sim/cps/: cps_2001.txt  cps_2002.txt
