[project]
name = "ingestion-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.26.5",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rapidocr>=3.9.1",
    "rapidocr-onnxruntime>=1.4.4",
]
